// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RUST_COMMON_PRESET Enum should render \`enum\` of union type with Default implementation of integer type 1`] = `
"// Address represents a Address model.
#[derive(Clone, Debug, Eq, PartialEq)]
pub struct Address {
    pub members: Box<crate::Members>,
    pub optional_members: Option<Box<crate::OptionalMembers>>,
    pub additional_properties: Option<std::collections::HashMap<String, String>>,
}

impl Address {
    pub fn new(members: crate::Members, optional_members: Option<crate::OptionalMembers>, additional_properties: Option<std::collections::HashMap<String, String>>) -> Address {
        Address {
            members: Box::new(members),
            optional_members: optional_members.map(Box::new),
            additional_properties,
        }
    }
}
"
`;

exports[`RUST_COMMON_PRESET Enum should render \`enum\` of union type with Default implementation of integer type 2`] = `
"// Members represents a union of types: String, f64, bool
#[derive(Clone, Debug, PartialEq, PartialOrd)]
pub enum Members {
    MembersOneOf00(String),
    MembersOneOf11(f64),
    MembersOneOf22(bool),
}

"
`;

exports[`RUST_COMMON_PRESET Enum should render \`enum\` of union type with Default implementation of integer type 3`] = `
"// OptionalMembers represents a union of types: String, f64, bool
#[derive(Clone, Debug, PartialEq, PartialOrd)]
pub enum OptionalMembers {
    OptionalMembersOneOf00(String),
    OptionalMembersOneOf11(f64),
    OptionalMembersOneOf22(bool),
}

"
`;

exports[`RUST_COMMON_PRESET Enum should render \`enum\` of union type with Default implementation of string type 1`] = `
"// Address represents a Address model.
#[derive(Clone, Debug, Eq, PartialEq)]
pub struct Address {
    pub members: Box<crate::Members>,
    pub optional_members: Option<Box<crate::OptionalMembers>>,
    pub additional_properties: Option<std::collections::HashMap<String, String>>,
}

impl Address {
    pub fn new(members: crate::Members, optional_members: Option<crate::OptionalMembers>, additional_properties: Option<std::collections::HashMap<String, String>>) -> Address {
        Address {
            members: Box::new(members),
            optional_members: optional_members.map(Box::new),
            additional_properties,
        }
    }
}
"
`;

exports[`RUST_COMMON_PRESET Enum should render \`enum\` of union type with Default implementation of string type 2`] = `
"// Members represents a union of types: String, f64, bool
#[derive(Clone, Debug, PartialEq, PartialOrd)]
pub enum Members {
    MembersOneOf00(String),
    MembersOneOf11(f64),
    MembersOneOf22(bool),
}

"
`;

exports[`RUST_COMMON_PRESET Enum should render \`enum\` of union type with Default implementation of string type 3`] = `
"// OptionalMembers represents a union of types: String, f64, bool
#[derive(Clone, Debug, PartialEq, PartialOrd)]
pub enum OptionalMembers {
    OptionalMembersOneOf00(String),
    OptionalMembersOneOf11(f64),
    OptionalMembersOneOf22(bool),
}

"
`;

exports[`RUST_COMMON_PRESET Enum should render \`enum\` with mixed types (union type) and Default implementation 1`] = `
"// Things represents a Things model.
#[derive(Clone, Copy, Debug, Eq, Hash, Ord, PartialEq, PartialOrd)]
pub enum Things {
    Texas,
    Number_1,
    ReservedNumber_1,
    ReservedFalse,
    CurlyleftQuotationTestQuotationColonQuotationTestQuotationCurlyright,
}
impl Default for Things {
    fn default() -> Things {
        Things::Texas
    }
}"
`;

exports[`RUST_COMMON_PRESET Enum should render \`enum\` without Default implementation 1`] = `
"// Things represents a Things model.
#[derive(Clone, Copy, Debug, Eq, Hash, Ord, PartialEq, PartialOrd)]
pub enum Things {
    Texas,
    Number_1,
    ReservedNumber_1,
    ReservedFalse,
    CurlyleftQuotationTestQuotationColonQuotationTestQuotationCurlyright,
}
"
`;

exports[`RUST_COMMON_PRESET Enum should render enums with translated special characters 1`] = `
"// States represents a States model.
#[derive(Clone, Copy, Debug, Eq, Hash, Ord, PartialEq, PartialOrd)]
pub enum States {
    TestPlus,
    DollarTest,
    TestMinus,
    TestQuestionExclamation,
    AsteriskTest,
}
impl Default for States {
    fn default() -> States {
        States::TestPlus
    }
}"
`;

exports[`RUST_COMMON_PRESET Enum should render implement Default for \`enum (default provided) 1`] = `
"// CustomEnum represents a CustomEnum model.
#[derive(Clone, Copy, Debug, Eq, Hash, Ord, PartialEq, PartialOrd)]
pub enum CustomEnum {
    Texas,
    Alabama,
    California,
}
impl Default for CustomEnum {
    fn default() -> CustomEnum {
        CustomEnum::Texas
    }
}"
`;

exports[`RUST_COMMON_PRESET Enum should render reserved union for dict array 1`] = `
"// Class represents a Class model.
#[derive(Clone, Debug)]
pub struct Class {
    pub students: Vec<crate::ReservedUnion>,
    pub additional_properties: Option<std::collections::HashMap<String, serde_json::Value>>,
}

impl Class {
    pub fn new(students: Vec<crate::ReservedUnion>, additional_properties: Option<std::collections::HashMap<String, serde_json::Value>>) -> Class {
        Class {
            students,
            additional_properties,
        }
    }
}
"
`;

exports[`RUST_COMMON_PRESET Enum should render reserved union for dict array 2`] = `
"// ReservedUnion represents a union of types: Student0, serde_json::Value
#[derive(Clone, Debug)]
pub enum ReservedUnion {
    Student0(crate::Student),
    Undefined1(serde_json::Value),
}

"
`;

exports[`RUST_COMMON_PRESET Enum should render reserved union for dict array 3`] = `
"// Student represents a Student model.
#[derive(Clone, Debug)]
pub struct Student {
    pub name: String,
    pub birth: f64,
    pub additional_properties: Option<std::collections::HashMap<String, serde_json::Value>>,
}

impl Student {
    pub fn new(name: String, birth: f64, additional_properties: Option<std::collections::HashMap<String, serde_json::Value>>) -> Student {
        Student {
            name,
            birth,
            additional_properties,
        }
    }
}
"
`;

exports[`RUST_COMMON_PRESET Struct & Complete Models should render \`struct\` type with all implementations 1`] = `
"// Address represents a Address model.
#[derive(Clone, Debug, PartialEq)]
pub struct Address {
    pub street_name: String,
    pub city: String,
    pub state: String,
    pub house_number: f64,
    pub marriage: Option<bool>,
    pub members: Option<Box<crate::Members>>,
    pub tuple_type: Option<Box<crate::TupleType>>,
    pub array_type: Vec<String>,
    pub additional_properties: Option<std::collections::HashMap<String, String>>,
}

impl Address {
    pub fn new(street_name: String, city: String, state: String, house_number: f64, marriage: Option<bool>, members: Option<crate::Members>, tuple_type: Option<crate::TupleType>, array_type: Vec<String>, additional_properties: Option<std::collections::HashMap<String, String>>) -> Address {
        Address {
            street_name,
            city,
            state,
            house_number,
            marriage,
            members: members.map(Box::new),
            tuple_type: tuple_type.map(Box::new),
            array_type,
            additional_properties,
        }
    }
}
"
`;

exports[`RUST_COMMON_PRESET Struct & Complete Models should render \`struct\` type with all implementations 2`] = `
"// Members represents a union of types: String, f64, bool
#[derive(Clone, Debug, PartialEq, PartialOrd)]
pub enum Members {
    MembersOneOf00(String),
    MembersOneOf11(f64),
    MembersOneOf22(bool),
}

"
`;

exports[`RUST_COMMON_PRESET Struct & Complete Models should render \`struct\` type with all implementations 3`] = `
"// TupleType represents a TupleType model.
#[derive(Clone, Debug, PartialEq, PartialOrd)]
pub struct TupleType(String, f64);

impl TupleType {
    pub fn new(value_0: String, value_1: f64) -> TupleType {
        TupleType(value_0, value_1)
    }
}

"
`;

exports[`RUST_COMMON_PRESET Struct & Complete Models should render \`struct\` without Default or new() implementation 1`] = `
"// Address represents a Address model.
#[derive(Clone, Debug, PartialEq)]
pub struct Address {
    pub street_name: String,
    pub city: String,
    pub state: String,
    pub house_number: f64,
    pub marriage: Option<bool>,
    pub members: Option<Box<crate::Members>>,
    pub tuple_type: Option<Box<crate::TupleType>>,
    pub array_type: Vec<String>,
    pub additional_properties: Option<std::collections::HashMap<String, String>>,
}

impl Address {
    
}
"
`;
